[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/kucyk.webp" type="Texture" id=1]
[ext_resource path="res://src/Actor/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://src/Shaders/ColorizeTexture.tres" type="Material" id=3]
[ext_resource path="res://assets/voice/pony_steps.mp3" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.625, 2 )

[sub_resource type="Animation" id=3]
resource_name = "WalkingLeft"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KinematicBody2D/Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=4]
resource_name = "WalkingRight"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KinematicBody2D/Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4.5, 1.5 )

[node name="Player" type="Node2D"]
script = ExtResource( 2 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
position = Vector2( -7, 4 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
material = ExtResource( 3 )
position = Vector2( 8, -7 )
scale = Vector2( -1, 1 )
texture = ExtResource( 1 )
hframes = 4

[node name="HitBox" type="Area2D" parent="KinematicBody2D"]
visible = false
collision_layer = 6
collision_mask = 8

[node name="HitBoxCollision" type="CollisionShape2D" parent="KinematicBody2D/HitBox"]
position = Vector2( 7.625, -4 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="KinematicBody2D"]
root_node = NodePath("../..")
anims/WalkingLeft = SubResource( 3 )
anims/WalkingRight = SubResource( 4 )

[node name="Camera2D" type="Camera2D" parent="KinematicBody2D"]
current = true
smoothing_enabled = true

[node name="WalkCollision" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 7.5, -1.5 )
shape = SubResource( 5 )

[node name="HitboxAudio" type="AudioStreamPlayer" parent="."]

[node name="WalkingAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="KinematicBody2D/HitBox" to="." method="_on_HitBox_body_entered"]
